# Storm

./: CMakeLists.txt  README.md  Storm.cpp  Storm.h  main.cpp
Storm Demo/Storm Demo/: Query.cpp  Store.h  Storm.cpp  Storm.h  main.cpp
Storm Demo/Storm Demo.xcodeproj/: project.pbxproj
Storm Demo/Storm Demo.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: Storm Demo.xcscheme  xcschememanagement.plist
Storm.sketch/: Data  metadata
Storm/Storm/: Query.cpp  Query.h  Store.cpp  Store.h  Storm.cpp  Storm.h
Storm/Storm.xcodeproj/: project.pbxproj
Storm/Storm.xcodeproj/project.xcworkspace/xcshareddata/: Storm.xccheckout
Storm/Storm.xcodeproj/project.xcworkspace/xcuserdata/thomas.xcuserdatad/: UserInterfaceState.xcuserstate
Storm/Storm.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: Storm.xcscheme  StormTests.xcscheme  StormTouch.xcscheme  xcschememanagement.plist
Storm/StormTests/: StormTests.m
Storm/StormTouch/: StormTouch.h
Storm/StormTouchTests/: StormTouchTests.m
artwork/Storm.sketch/: Data  metadata
clion/: include.h
src/: Query.h  Store.cpp
xcode/Demo/: include.h
xcode/Demo/Demo.xcodeproj/: project.pbxproj
xcode/Demo/Demo.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: Demo.xcscheme  xcschememanagement.plist
xcode/Storm.xcworkspace/: contents.xcworkspacedata
xcode/Storm.xcworkspace/xcshareddata/: Storm.xccheckout
xcode/Storm.xcworkspace/xcuserdata/thomas.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Storm/Storm.xcodeproj/: project.pbxproj
xcode/Storm/StormTests/: StormTests.m
(+6 files in other folders)
